Use https (cookies fixed), add horizontal scrolling

--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -86,9 +86,11 @@ nav a.live:hover {
 
 .label {
   text-align: center;
+  max-width: 200px;
 }
 
 .photo {
     border-radius: 20px 20px 0 0;
+    width: 200px;
     max-width: 200px;
 }
